2003-08-25  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Layout.xml: mostly documented
	* en/Gtk/Timeout.xml: documented

2003-08-18  John Luke  <jluke@cfl.rr.com>

	* en/Gnome/Help.xml: documented
	* en/Gnome/CanvasText.xml: add example from monkeyguide

2003-08-09  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Entry.xml: add example

2003-08-06  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/Notebook.xml: add example, see references
	* en/Gtk/Statusbar.xml: add example

2003-08-06  Xavier Amado <xavier@blackbloodstudios.com>

	* /en/Gtk/Notebook.xml: documented the CurrentPageWidget property
                                                                           
2003-08-04  Martin Willemoes Hansen <mwh@sysrq.dk>
	* /en/Gnome/InteractFunction.xml:
	* /en/Gnome/ModuleClassInitHook.xml:
	* /en/Gnome/ModuleHook.xml:
	* /en/Gnome/ModuleInitHook.xml:
	* /en/Gnome/TriggerActionFunction.xml:
	* /en/Gnome/UISignalConnectFunc.xml: documented

2003-08-03  Martin Willemoes Hansen <mwh@sysrq.dk>

	* /en/Gnome/ClientState.xml:
	* /en/Gnome/FileDomain.xml:
	* /en/Gnome/HelpError.xml:
	* /en/Gnome/PreferencesType.xml:
	* /en/Gnome/TriggerType.xml:
	* /en/Gnome/URLError.xml: documented

2003-08-02  Martin Willemoes Hansen <mwh@sysrq.dk>

	* /en/Gnome/UIPixmapType.xml:
	* /en/Gnome/UIInfoConfigurableTypes.xml:
	* /en/Gnome/IconListMode.xml:
	* /en/Gnome/FontPickerMode.xml:
	* /en/Gnome/DateEditFlags.xml:
	* /en/Gnome/ClientFlags.xml:
	* /en/Gnome/DialogType.xml:
	* /en/Gnome/EdgePosition.xml: 
	* /en/Gnome/InteractStyle.xml:
	* /en/Gnome/RestartStyle.xml: 
	* /en/Gnome/SaveStyle.xml: 
	* /en/Gnome/UIInfoType.xml: documented

2003-08-01  Martin Willemoes Hansen <mwh@sysrq.dk>

	* /en/Gtk/MessageDialog.xml: Fixed remark.

2003-08-01  John Luke  <jluke@cfl.rr.com>

	* en/*.xml: use C#-style names, ex Gdk instead of GDK
	* en/Gtk/TreeView.xml: add some info
	* en/Gtk/MessageDialog.xml: clean up

2003-07-31  John Luke  <jluke@cfl.rr.com>
