@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An abstract base class to derive structures and marshal them.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -24,10 +24,10 @@
 		<Parameter Name="o" Type="System.Object" />
 	</Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="o">To be added: an object of type 'object'</param>
-        <returns>To be added: an object of type 'GLib.Boxed'</returns>
-        <remarks>To be added</remarks>
+        <summary>Constructs a Boxed type from a raw ref.</summary>
+        <param name="o">an object of type <see cref="T:System.Object" /></param>
+        <returns>an object of type <see cref="T:GLib.Boxed" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -38,10 +38,10 @@
 		<Parameter Name="ptr" Type="System.IntPtr" />
 	</Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="ptr">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'GLib.Boxed'</returns>
-        <remarks>To be added</remarks>
+        <summary>Internal Constructor</summary>
+        <param name="ptr">an object of type <see cref="T:System.IntPtr" /></param>
+        <returns>an object of type <see cref="T:GLib.Boxed" /></returns>
+        <remarks>This is not typically called directly.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Obj">
@@ -54,8 +54,8 @@
 	</Parameters>
       <Docs>
         <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'object'</param>
-        <returns>To be added: an object of type 'object'</returns>
+        <param name="value">an object of type <see cref="T:System.Object" /></param>
+        <returns>an object of type <see cref="T:System.Object" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -68,10 +68,10 @@
       <Parameters>
 	</Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'IntPtr'</returns>
-        <remarks>To be added</remarks>
+        <summary>Gets or sets a marshallable <see cref="T:System.IntPtr" />.</summary>
+        <param name="value">an object of type <see cref="T:System.IntPtr" /></param>
+        <returns>an object of type <see cref="T:System.IntPtr" /></returns>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
