@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Wrapper class for delegates.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -24,9 +24,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>IMPORTANT: this method must be the first one called from the callback methods that are invoked from unmanaged code.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>If this method returns <see langword="true" />, the object that created the delegate wrapper no longer exists and the instance of the delegate itself is removed from the hash table.</remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -37,10 +37,10 @@
 		<Parameter Name="o" Type="System.Object" />
 	</Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>The <paramref name="o" /> is the object that creates the instance of the DelegateWrapper derived class or null if created from a static method.</summary>
         <param name="o">a <see cref="T:System.Object" /></param>
         <returns>a <see cref="T:GLib.DelegateWrapper" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Note that the instances will never be disposed if they are created in a static method.</remarks>
       </Docs>
     </Member>
   </Members>
