@@ -1,3 +1,8 @@
+2003-08-29  John Luke  <jluke@cfl.rr.com>
+
+	* en/GLib/Boxed.xml:
+	* en/GLib/DelegateWrapper.xml: transfer in-line comments
+	
 2003-08-25  John Luke  <jluke@cfl.rr.com>
 
 	* en/Gtk/Layout.xml: mostly documented
